# VRAutoMatte

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  gsd.db-shm  gsd.db-wal
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S02/: S02-PLAN.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S03/: S03-PLAN.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S04/: S04-PLAN.md  S04-SUMMARY.md  S04-UAT.md
docs/: PLANNING.md
src/vrautomatte/: __init__.py  main.py
src/vrautomatte/pipeline/: checkpoint.py  matanyone2.py  matte.py  runner.py  rvm.py  rvm_onnx.py  sam2_masks.py  scaler.py  scene_detect.py
src/vrautomatte/ui/: main_window.py  preview.py  themes.py  worker.py
src/vrautomatte/utils/: bootstrap.py  ffmpeg.py  gpu.py  masks.py  sbs.py  settings.py
tests/: test_integration_matanyone2.py  test_matte_protocol.py  test_pov_mask.py  test_rvm_onnx.py  test_sbs.py  test_scene_detect.py
