[project]
name = "vrautomatte"
version = "0.1.0"
description = "Automated video matting and alpha channel generation for VR passthrough content"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
vrautomatte = "vrautomatte.main:main"

[project.dependencies]
torch = ">=2.0"
torchvision = ">=0.15"
PySide6 = ">=6.6"
numpy = ">=1.24"
Pillow = ">=10.0"
loguru = ">=0.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vrautomatte"]

[tool.hatch.build.targets.sdist]
include = ["src/vrautomatte"]
