[project]
name = "vrautomatte"
version = "0.1.0"
description = "Automated video matting and alpha channel generation for VR passthrough content"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "PySide6>=6.6",
    "numpy>=1.24",
    "Pillow>=10.0",
    "loguru>=0.7",
]

[project.scripts]
vrautomatte = "vrautomatte.main:main"

[project.optional-dependencies]
onnx = [
    "onnxruntime-directml>=1.18; sys_platform == 'win32'",
    "onnxruntime>=1.18; sys_platform != 'win32'",
]
matanyone2 = [
    "matanyone2 @ git+https://github.com/pq-yang/MatAnyone2.git",
    "sam2>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[tool.uv]
override-dependencies = [
    "netifaces ; python_version < '0'",
    "cchardet ; python_version < '0'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vrautomatte"]

[tool.hatch.build.targets.sdist]
include = ["src/vrautomatte"]
